# ComfyUI-Doctor

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruffignore  .secrets.baseline  README.md  README.zh-TW.md  ROADMAP.md  __init__.py  analyzer.py  config.py  history_store.py  i18n.py  import_compat.py  lint.ps1  llm_client.py  logger.py  nodes.py  outbound.py  package-lock.json  package.json  pattern_loader.py  playwright.config.js  prestartup_script.py  pyproject.toml  pytest.ini  rate_limiter.py  requirements-dev.txt  roadmap.md  run_pattern_tests.py  run_tests.ps1  sanitizer.py  security.py  session_manager.py  statistics.py  system_info.py  telemetry.py  test-run-output.txt  truncate_workflow.py  (+2 more)
.claude/: settings.local.json
.githooks/: pre-push
.github/workflows/: coverage-baseline.yml  outbound-safety.yml  pattern-validation.yml  phase2-release-gate.yml
.planning/: 260114-R15_SYSTEM_INFO_CANONICALIZATION_AND_PIPELINE_LOGS_PLAN.md  260114-R15_SYSTEM_INFO_CANONICALIZATION_AND_PIPELINE_LOGS_RECORD.md  PROFESSIONAL_ANALYSIS.md  ROADMAP.md
docs/: API_REFERENCE.md  CONFIGURATION_SECURITY.md  OUTBOUND_SAFETY.md  PLUGIN_GUIDE.md  PLUGIN_MIGRATION.md  USER_GUIDE.md  VALIDATION.md
docs/artifacts/: debug_output.txt
docs/readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  README.zh-TW.md.patch
patterns/: schema.json
patterns/builtin/: core.json
patterns/community/: animatediff.json  controlnet.json  facerestore.json  ipadapter.json  lora.json  misc.json  vae.json
pipeline/: __init__.py  base.py  context.py  metadata_contract.py  orchestrator.py
pipeline/plugins/: __init__.py
pipeline/stages/: __init__.py  context_enhancer.py  llm_builder.py  pattern_matcher.py  sanitizer.py
readme/: README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md
scripts/: README.md  check_host_compatibility.py  check_outbound_safety.py  e2e-server.mjs  lint.ps1  phase2_gate.py  phase2_gate.sh  plugin_allowlist.py  plugin_hmac_sign.py  plugin_manifest.py  plugin_validator.py  pre_push_checks.sh  preflight-js.mjs  r12_ab_harness.py  run-playwright.mjs  run_coverage_baseline.py  run_full_tests_linux.sh  run_full_tests_windows.ps1  run_pattern_tests.py  run_tests.ps1  validate_host_load.py
services/: __init__.py  admin_guard.py  api_response.py  audit.py  community_feedback.py  config_guardrails.py  confirmation.py  context_extractor.py  doctor_paths.py  job_manager.py  llm_keys.py  llm_provider_adapters.py  log_ring_buffer.py  node_health.py  policy.py  prompt_composer.py  routes.py  secret_store.py  time_utils.py  token_budget.py  token_estimator.py  workflow_pruner.py
services/diagnostics/: __init__.py  models.py  runner.py  store.py
services/intent/: __init__.py  loader.py
services/providers/: base.py  registry.py
tests/: E2E_TESTING_NOTICE.md  E2E_TESTING_SOP.md  TEST_SOP.md  __init__.py  conftest.py  test_a10_adapter.py  test_a15_llm_context_pipeline.py  test_a4_node_context_immutability.py  test_a5_llm_provider_adapters.py  test_analyzer_pipeline.py  test_api_endpoints.py  test_chat_safety.py  test_context_enhancer_provenance.py  test_context_extraction.py  test_di_mocking.py  test_diagnostics_checks.py  test_f16_community_feedback.py  test_f18_signature_packs.py  test_history_store.py  test_host_compatibility_script.py  test_integrations.py  test_intent_system.py  test_llm_client.py  test_logger_backpressure.py  test_logger_safety.py  test_metadata_contract.py  test_nodes_deep.py  test_outbound_payload_safety.py  test_outbound_safety_gate.py  test_paths.py  test_pattern_loader.py  test_pattern_validation.py  test_pipeline_dependency_policy.py  test_pipeline_infra.py  test_plugin_discovery.py  test_plugins_security.py  test_r12_golden.py  test_r14_services.py  test_r15_system_info.py  test_r17_guardrails.py  (+35 more)
tests/e2e/: README.md  test-output.txt  (+2 more)
web/: ErrorBoundary.js  chat-island.js  comfyui_frontend_compat.js  doctor.js  doctor_actions.js  doctor_api.js  doctor_chat.css  doctor_chat.js  doctor_fix_handler.js  doctor_rendering.js  doctor_selectors.js  doctor_state.js  doctor_tabs.js  doctor_telemetry.js  doctor_ui.js  error_boundary.css  global_error_handler.js  island_registry.js  llm_key_store.js  preact-loader.js  privacy_utils.js  statistics-island.js
(+40 files in other folders)
